# Conversational-RAG

./: .gitignore  README.md  init_history.sh  package.json  pnpm-lock.yaml
backend/: .env.example  pyproject.toml  setup_venv.sh  test_migration.py
backend/app/: main.py
backend/app/api/: auth.py  chat.py  demo.py  documents.py  feedback.py  health.py  metrics.py  workspace.py
backend/app/core/: config.py  logging.py  metrics.py  security.py
backend/app/data/: demo_chats.json  demo_index.json
backend/app/db/: client.py  schemas.py
backend/app/rag/: chain.py  citations.py  groq_client.py  memory.py  prompts.py  retriever.py
backend/app/services/: auth_service.py  cache_service.py  chat_service.py  demo_chat_store.py  demo_ingest.py  demo_service.py  document_ingest_service.py  ingestion_service.py  metrics_service.py  retrieval_service.py  workspace_store.py
backend/app/workers/: demo_reset_worker.py
backend/scripts/: lint.sh
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: api.md  architecture.md  database.md  demo-mode.md  deployment.md  diagrams.md  evaluation.md
frontend/: .env.example  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/demo/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/workspace/: page.tsx
frontend/components/analytics/: metric-card.tsx  trend-bars.tsx
frontend/lib/: api.ts  session.ts
supabase/: demo_seed.sql  seed.sql
supabase/migrations/: 0001_init.sql
(+17 files in other folders)
